<resources>
    <string name="app_name">NetOne</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="onemoney">OneMoney</string>
    <string name="contacts">Contacts</string>
    <string name="more">More</string>
    <string name="dashboard">Dashboard</string>
    <string name="shop_details">Shop Details</string>
    <string name="head_office">Head Office</string>
    <string name="more_options">More Options</string>
    <string name="pay_options">ZIMRA, Edgards/Jet, ZIMWA</string>
    <string name="onemoney_payments">OneMoney Payments</string>
    <string name="out_of_bundle_browsing">Out of Bundle Browsing</string>
    <string name="obb">OBB</string>
    <string name="about">About</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="share_app">Share App</string>
    <string name="airtime_topup">Airtime Topup</string>
    <string name="buy_zesa">Buy Zesa</string>
    <string name="pay_merchant">Pay Merchant</string>
    <string name="check_balance">Check Balance</string>
    <string name="data_bundles">Data Bundles</string>
    <string name="one_fusion">One Fusion</string>
    <string name="one_fi">One-Fi</string>
    <string name="call_me_back">Call Me Back</string>
    <string name="airtime_credit">Airtime Credit</string>
    <string name="katsaona">KaTsaona</string>
    <string name="one_cover">One Cover</string>
    <string name="call_center">Call Center</string>
    <string name="send_money">Send Money</string>
    <string name="zipit">ZIPIT</string>
    <string name="social_media">Social Media</string>
    <string name="sms_bundle">SMS Bundle</string>
    <string name="others">Others</string>
    <string name="school_fees">School Fees</string>
    <string name="cash_out">Cash Out</string>
    <string name="pay_bill">Pay Bill</string>
    <string name="banking">Banking</string>
    <string name="language">Language</string>
    <string name="services">Services</string>
    <string name="netone_mobile_app">NetOne Mobile App</string>
    <string name="all_in_one">All in One</string>
    <string name="other_services">Other Services</string>
    <string name="airtime_voucher">Airtime Voucher</string>
    <string name="version_number">v4.0.0</string>
    <string name="developer_details">Developer : glen chiridza \n glenchiridz@gmail.com\n</string>
    <string name="your_short_codes">Your Short Codes</string>
    <string name="save_code">Save Code</string>
    <string name="short_code">Short Code</string>
    <string name="shortcode_title">ShortCode Title</string>
    <string name="starred">Starred</string>
    <string name="codename">CodeName</string>
</resources>