<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@drawable/ic_home"
        android:orderInCategory="30"
        />
    <item
        android:id="@+id/nav_one_money"
        android:title="@string/onemoney"
        android:icon="@drawable/ic_money"
        android:orderInCategory="50"/>
    <item
        android:id="@+id/nav_contacts"
        android:title="@string/contacts"
        android:icon="@drawable/ic_contacts"
        android:orderInCategory="60"/>
    <item
        android:id="@+id/nav_more"
        android:title="@string/more"
        android:icon="@drawable/ic_more"
        android:orderInCategory="70"/>
</menu>