<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/check_balance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="3dp"
        android:background="@drawable/back_card"
        android:text="@string/check_balance"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:drawableTint="@color/white"
        app:drawableTopCompat="@drawable/ic_account_balance"
        app:layout_constraintEnd_toStartOf="@+id/airtime_top_up"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/airtime_top_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/back_card_brown"
        android:text="@string/airtime_topup"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:drawableTint="@color/white"
        app:drawableTopCompat="@drawable/ic_money"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/check_balance"
        app:layout_constraintTop_toTopOf="@+id/check_balance" />

    <TextView
        android:id="@+id/buy_zesa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="3dp"
        android:background="@drawable/back_card_brown"
        android:text="@string/buy_zesa"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:drawableTint="@color/white"
        app:drawableTopCompat="@drawable/ic_zesa_power"
        app:layout_constraintEnd_toStartOf="@+id/pay_merchant"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@+id/check_balance"
        app:layout_constraintTop_toBottomOf="@+id/airtime_top_up" />

    <TextView
        android:id="@+id/pay_merchant"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:background="@drawable/back_card"
        android:text="@string/pay_merchant"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:drawableTopCompat="@drawable/ic_payment"
        app:layout_constraintEnd_toEndOf="@+id/airtime_top_up"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buy_zesa"
        app:layout_constraintTop_toTopOf="@+id/buy_zesa" />

    <TextView
        android:id="@+id/bundles"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/card_border_color"
        android:text="@string/data_bundles"
        android:textAlignment="center"
        app:drawableTopCompat="@drawable/ic_bundles"
        app:layout_constraintEnd_toStartOf="@+id/one_fusion"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@+id/buy_zesa"
        app:layout_constraintTop_toBottomOf="@+id/zipit" />

    <TextView
        android:id="@+id/one_fusion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:background="@drawable/card_border_color"
        android:text="@string/one_fusion"
        android:textAlignment="center"
        app:drawableTopCompat="@drawable/ic_one_fusion"
        app:layout_constraintEnd_toStartOf="@+id/one_fi"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bundles"
        app:layout_constraintTop_toTopOf="@+id/bundles" />

    <TextView
        android:id="@+id/one_fi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/card_border_color"
        android:text="@string/one_fi"
        android:textAlignment="center"
        app:drawableTopCompat="@drawable/ic_wifi"
        app:layout_constraintEnd_toEndOf="@+id/pay_merchant"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/one_fusion"
        app:layout_constraintTop_toTopOf="@+id/one_fusion" />

    <TextView
        android:id="@+id/school_fees"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/card_border_color"
        android:text="@string/school_fees"
        android:textAlignment="center"
        app:drawableTopCompat="@drawable/ic_school_fees"
        app:layout_constraintEnd_toStartOf="@+id/cash_out"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/bundles"
        app:layout_constraintTop_toBottomOf="@+id/one_fusion" />

    <TextView
        android:id="@+id/cash_out"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:background="@drawable/card_border_color"
        android:text="@string/cash_out"
        android:textAlignment="center"
        app:drawableTopCompat="@drawable/ic_cash_out"
        app:layout_constraintEnd_toStartOf="@+id/pay_bill"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/school_fees"
        app:layout_constraintTop_toTopOf="@+id/school_fees" />

    <TextView
        android:id="@+id/pay_bill"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/card_border_color"
        android:text="@string/pay_bill"
        android:textAlignment="center"
        app:drawableTopCompat="@drawable/ic_pay_bill"
        app:layout_constraintEnd_toEndOf="@+id/one_fi"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cash_out"
        app:layout_constraintTop_toTopOf="@+id/cash_out" />

    <TextView
        android:id="@+id/banking"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/card_border_color"
        android:text="@string/banking"
        android:textAlignment="center"
        app:drawableTopCompat="@drawable/ic_banking"
        app:layout_constraintEnd_toStartOf="@+id/language"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/school_fees"
        app:layout_constraintTop_toBottomOf="@+id/cash_out" />

    <TextView
        android:id="@+id/language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:background="@drawable/card_border_color"
        android:text="@string/language"
        android:textAlignment="center"
        app:drawableTopCompat="@drawable/ic_language"
        app:layout_constraintEnd_toStartOf="@+id/services"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/banking"
        app:layout_constraintTop_toTopOf="@+id/banking" />

    <TextView
        android:id="@+id/services"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/card_border_color"
        android:text="@string/services"
        android:textAlignment="center"
        app:drawableTopCompat="@drawable/ic_services"
        app:layout_constraintEnd_toEndOf="@+id/pay_bill"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/language"
        app:layout_constraintTop_toTopOf="@+id/language" />


    <TextView
        android:id="@+id/send_money"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="3dp"
        android:background="@drawable/back_card_brown"
        android:text="@string/send_money"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:drawableTopCompat="@drawable/ic_send_money"
        app:layout_constraintEnd_toStartOf="@+id/zipit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/buy_zesa"
        app:layout_constraintTop_toBottomOf="@+id/pay_merchant" />

    <TextView
        android:id="@+id/zipit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:background="@drawable/back_card"
        android:text="@string/zipit"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:drawableTopCompat="@drawable/ic_zipit"
        app:layout_constraintEnd_toEndOf="@+id/pay_merchant"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/send_money"
        app:layout_constraintTop_toTopOf="@+id/send_money" />


    <TextView
        android:id="@+id/social_media"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/card_border_color"
        android:text="@string/social_media"
        android:textAlignment="center"
        app:drawableTopCompat="@drawable/ic_facebook"
        app:layout_constraintEnd_toStartOf="@+id/sms_bundle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/banking"
        app:layout_constraintTop_toBottomOf="@+id/banking" />

    <TextView
        android:id="@+id/sms_bundle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/sms_bundle"
        android:textAlignment="center"
        android:background="@drawable/card_border_color"
        app:drawableTopCompat="@drawable/ic_sms"
        app:layout_constraintEnd_toStartOf="@+id/others"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/social_media"
        app:layout_constraintTop_toTopOf="@+id/social_media" />

    <TextView
        android:id="@+id/others"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/others"
        android:textAlignment="center"
        android:background="@drawable/card_border_color"
        app:drawableTopCompat="@drawable/ic_others"
        app:layout_constraintEnd_toEndOf="@+id/services"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sms_bundle"
        app:layout_constraintTop_toTopOf="@+id/sms_bundle" />


</androidx.constraintlayout.widget.ConstraintLayout>